completed intro section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&family=Ubuntu+Mono&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400&family=Ubuntu:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> 
 
     <link rel="stylesheet" href="css/style.css">
   </head>
@@ -35,13 +35,13 @@
     </header>
 
 
-    <!--Introduction-->
+    <!-- Introduction -->
     <section class="intro" id="home">
       <h1 class="section__title section__title--intro">
-        Hello friend, my name is <strong>Jesus Fuentes</strong>
+        Hello, I'm <strong>Jesus Fuentes</strong>
       </h1>
       <p class="section__subtitle section__subtitle--intro">full-stack dev</p>
-      <img src="img/myself.jpg" alt="picture of myself">
+      <img src="img/me.jpg" alt="picture of myself" class="intro__img">
     </section>
 
 
